# 1D-FEM

./: .editorconfig  .flake8  .gitattributes  .gitignore  1D-FEM-solver.py  README.md  exact.py  fem_core.py  fem_front.py  fem_solver.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  build.yml
deprecated/: 1D-FEM-solver-reaction-diffusion.py
docs/: notes.md
examples/: laplace_1D.py  laplace_2D.py  laplace_2D_A.py  laplace_2D_B.py  sad_1D.py  sadr_1D.py  sdr_1D.py  sdr_1D_A.py  sdr_1D_B.py  thermal_explosion.py
flexible_fem/: fem_core.py  fem_front.py  main.py
src/flexible_fem/: __init__.py  __main__.py  core.py  exact.py  fem_front.py  front.py
tests/: data_test_diffusion_2D.txt  test_integration.py  test_integration_1D.py  test_integration_2D.py  test_main.py  test_operators_1D.py  test_operators_2D.py  test_units.py
